Added new filters and switched classes for records